[package]
name = "binary-blog"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive", "cargo"] }
pulldown-cmark = "0.9"
lazy_static = "1.4"
convert_case = "0.6.0"
h2 = "0.3.17"
hyper = "0.14.26"
maud = { version = "0.24", features = ["axum"] }
axum = { version = "0.6.11", features = ["http2"] }
time = { version = "0.3.20", features = ["macros", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rust-embed = "6.6.0"
regex = "1"
mime_guess = "2.0.4"
prometheus = "0.13.3"
protobuf = "2.28.0"

[dev-dependencies]
test-case = "3.0.0"
